# spaceSimulation

./: CMakeLists.txt  README.md  main.cpp
Components/: CMakeLists.txt
Components/include/: N-Body.hpp  gnuplot.hpp
